--- a/i_love_redux/package.json
+++ b/i_love_redux/package.json
@@ -13,7 +13,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "create-react-redux-structure-snoop": "mkdir ./process.env.name && chmod +x ./create-react-redux-structure-snoop.sh && ./create-react-redux-structure-snoop.sh && echo Structure Snoop is created OK"
   },
   "eslintConfig": {
     "extends": "react-app"
